[package]
name = "bilevel-aggregator"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/jesseglick/bilevel-aggregator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
copy = []
hybrid = ["dep:hashbrown"]
borrow = ["dep:hashbrown"]

[dependencies]
hashbrown = {version = "0.14.5", optional = true}
